Adicionado sistema de backup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,13 @@ services:
     networks:
       - dokploy-network
     working_dir: /usr/src/app
-    command: ["sh", "-c", "npm install --force && npm start"] # Instala as dependências e inicia o aplicativo
+    # Instalando nano e configurando cron para backups automáticos
+    command: ["sh", "-c", "apt-get update && apt-get install -y nano cron && npm install --force && cron && npm start"]
     restart: unless-stopped
+    environment:
+      - TZ=America/Sao_Paulo  # Definindo timezone para São Paulo (BRT)
+    # Crontab para executar o backup todos os dias às 02:00 no horário de São Paulo (BRT)
+    # 0 2 * * * root /usr/local/bin/node /usr/src/app/backup.js > /dev/null 2>&1
+    volumes:
+      - ./crontab:/etc/cron.d/tgcampusbot-cron
+      - /etc/localtime:/etc/localtime:ro # Sincroniza o timezone com o host
